# winecraft

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  winecraft.i64
.cache/clangd/index/: SOIL.h.BCA825E07E78154F.idx  glad.c.53E6AC4E2E31D4CC.idx  glad.h.F69614F3005C308A.idx  image_dxt.c.0DBF0EBEBF66CEC9.idx  image_dxt.h.62B26A26AB138833.idx  image_helper.c.FB4EB1CA4DCA2102.idx  image_helper.h.DC29801A110E3782.idx  khrplatform.h.67E4E9D41F19F715.idx  main.cpp.3243D09793DC9228.idx  shader_utils.cpp.8D7968D0E3BA3F34.idx  shader_utils.h.700FC5194EAD00DC.idx  soil.c.4C261E94DE688BF8.idx  stb_image-1.09.c.6633A2269880E0C8.idx  stb_image-1.16.c.2E97FB4633D897D5.idx  stb_image_aug.c.82AF815938D27301.idx  stb_image_aug.h.4DC79BE326BA9ED1.idx  stbi_dds_aug.h.B2568BA55CE3D755.idx  stbi_dds_aug_c.h.45F2EF58AA33B3CE.idx
assets/: fragment.glsl  vertex.glsl
assets/shaders/: fragment.glsl  vertex.glsl
core/: assets.h  collisions.h  collisions.hpp  controls.hpp  createEntities.h  shader_utils.h  vars.h  vars.hpp
core/classes/entities/: camera.hpp  entity.hpp
core/classes/entities/camera/: camera.hpp  rotateCameraExtension.hpp
core/classes/entities/specialEntities/: specialEntity.hpp
core/classes/entities/specialEntities/camera/: camera.hpp
core/classes/extensions/: collisionExtension.hpp  extension.hpp  keyTrigger.hpp  moveMent.hpp  moveMentExtension.hpp  object.hpp  objectExtension.hpp  physicsExtension.hpp  position.hpp  positionExtension.hpp  testExtension.hpp
core/classes/extensions/collisionExtension/: collisionExtension.hpp
core/classes/hitBox/: hitBox.hpp  hitBoxRect.hpp
core/classes/hitBoxes/: collision.hpp  hitBox.hpp
core/classes/movement/: movement.hpp
core/classes/objects/: cube.hpp  object.hpp
core/classes/worldKeeper/: keyTrigger.hpp  worldKeeper.hpp
core/classes/worldKeeper/triggers/: keyTrigger.hpp  mouseTrigger.hpp  triggerManager.hpp
core/entities/: cube.hpp  entity.hpp
core/hitBoxes/: collision.hpp  hitBox.hpp
core/objects/: object.hpp
core/physics/: HitBox.hpp  collision.hpp
glad/include/glad/: glad.h
glad/src/: glad.c
src/: #main.cpp#  main.cpp  vars.cpp
src/classes/entities/: Controller.cpp  Entity.cpp  camera.cpp  entity.cpp
src/classes/entities/camera/: camera.cpp  rotateCameraExtension.cpp
src/classes/entities/specialEntities/: specialEntity.cpp
src/classes/entities/specialEntities/camera/: camera.cpp
src/classes/extensions/: collisionExtension.cpp  extension.cpp  moveMent.cpp  moveMentExtension.cpp  object.cpp  objectExtension.cpp  physicsExtension.cpp  position.cpp  positionExtension.cpp  testExtension.cpp
src/classes/extensions/collisionExtension/: collisionExtension.cpp
src/classes/hitBox/: hitBox.cpp  hitBoxRect.cpp
src/classes/hitBoxes/: Collision.cpp  HitBox.cpp
src/classes/movement/: movement.cpp
src/classes/objects/: Cube.cpp  Object.cpp
src/classes/worldKeeper/: keyTrigger.cpp  worldKeeper.cpp
src/classes/worldKeeper/triggers/: keyTrigger.cpp  mouseTrigger.cpp  triggerManager.cpp
src/control/: movement.cpp
src/entities/: Entity.cpp  cube.cpp
src/graphics/: collisions.cpp
src/objects/: Cube.cpp  Object.cpp
src/physics/: Collision.cpp  HitBox.cpp
src/utils/: assets.cpp  createEntities.cpp  shader_utils.cpp  texture_loader.cpp
